--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       // https://developers.facebook.com/apps/
       window.fbAsyncInit = function() {
         FB.init({
-          appId      : 'YOURAPPID',
+          appId      : '256690569640388',
           cookie     : true,
           xfbml      : true,
           version    : 'v2.8'
