--- a/index.html
+++ b/index.html
@@ -132,11 +132,12 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
           </ul>
+          <!-- user_birthday user_location user_posts -->
           <ul class="nav navbar-nav navbar-right">
             <li><a id="logout" href="#" onclick="logout()">Logout</a></li>
             <fb:login-button
               id="fb-btn"
-              scope="public_profile,email,user_birthday,user_location,user_posts"
+              scope="public_profile,email"
               onlogin="checkLoginState();">
             </fb:login-button>
           </ul>
